common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/Interest_Dividend_Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Interest Dividend Transaction Log</label>
    <nameField>
        <displayFormat>IDTL-{0000}</displayFormat>
        <label>Interest Dividend Transaction Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Dividend Transaction Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>