common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/fields/Days_included_in_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Days_included_in_Calculation__c</fullName>
    <label>Days included in Calculation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>