common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>