common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/fields/Interest_Dividend_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Interest_Dividend_Disbursement__c</fullName>
    <label>Interest Dividend Disbursement</label>
    <referenceTo>Interest_Dividend_Disbursement__c</referenceTo>
    <relationshipLabel>Interest Dividend Transaction Log</relationshipLabel>
    <relationshipName>Interest_Dividend_Transaction_Log</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>