common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Interest Dividend Transaction Log</relationshipLabel>
    <relationshipName>Interest_Dividend_Transaction_Log</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>