common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/fields/Unit_Cert_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cert_Amount__c</fullName>
    <formula>Opportunity__r.Unit_Certificate_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cert Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>