common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/fields/Unit_Cert_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cert_Date__c</fullName>
    <formula>Opportunity__r.Unit_Cert_Issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cert Date</label>
    <type>Date</type>
</CustomField>