common/force-app/main/default/objects/Interest_Dividend_Transaction_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Interest_Dividend_Disbursement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>